--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dpeekdotcom",
+  "name": "repo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,8 +17,6 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.8.6",
-    "@cloudflare/workers-types": "^4.20240208.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
